Properly filter resources to the particular space
